TEST_PROGRAMS/INVALID/stefan_knudsen/outOfOrder.min
var n : string;
read n;
var i : int;
i = 4;
